--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,15 @@ jobs:
       - name: Build project
         run: ./gradlew build
 
+      - name: Generate coverage report
+        run: ./gradlew jacocoTestReport
+
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+
   publish:
     if: github.event_name == 'push' || github.event_name == 'release'
     needs: build
