--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
         run: ./gradlew integrationTest
 
       - name: Generate coverage report
-        run: ./gradlew jacocoIntegrationTestReport
+        run: ./gradlew jacocoTestReport
 
       - name: Upload code coverage
         uses: codecov/codecov-action@v3
