--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,34 +29,17 @@ jobs:
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
 
-      - name: Unit test project
-        run: ./gradlew test
-
-      - name: Generate coverage report
-        run: ./gradlew jacocoTestReport
-
-      - name: Upload code coverage
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unit
-          fail_ci_if_error: true
-
-      - name: Integration test project
-        run: ./gradlew clean integrationTest
-
-      - name: Generate coverage report
-        run: ./gradlew jacocoTestReport
-
-      - name: Upload code coverage
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          flags: integration
-          fail_ci_if_error: true
-
       - name: Build project
-        run: ./gradlew build -x check
+        run: ./gradlew build
+
+      - name: Generate coverage report
+        run: ./gradlew jacocoTestReport
+
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
 
   publish:
     if: github.event_name == 'push' || github.event_name == 'release'
