Make publish workflow ignore documentation changes

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,12 @@
 on:
   push:
+    paths-ignore:
+      - docs/**
     branches:
       - main
   pull_request:
+    paths-ignore:
+      - docs/**
     branches:
       - main
 
