--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,5 +72,9 @@ jobs:
       - name: Publish to Maven
         run: ./gradlew publish
         env:
-          ORG_GRADLE_PROJECT_nebulaUsername: ${{ secrets.MAVEN_NAME }}
-          ORG_GRADLE_PROJECT_nebulaPassword: ${{ secrets.MAVEN_TOKEN }}
+          ORG_GRADLE_PROJECT_nebulaUsername: ${{ secrets.NEBULA_USERNAME }}
+          ORG_GRADLE_PROJECT_nebulaPassword: ${{ secrets.NEBULA_PASSWORD }}
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{secrets.MAVEN_CENTRAL_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.MAVEN_CENTRAL_IN_MEMORY_KEY_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.MAVEN_CENTRAL_SIGNING_IN_MEMORY_KEY }}
